# rv32i-virtObf

./: .gitignore  CMakeLists.txt  README.md  emu_rv32i.cpp  main.cpp  notes.md  only_fn_riscv_test.rv32i  pyproject.toml  testResults.md  test_results.txt  vmcore.cpp  vmcore.h
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  disassembler  emu_rv32i  execrv32i
automated_tests/: test_validation.py
automated_tests/rv32i_files/: complicated_fn_riscv_test.rv32i
automated_tests/testing_utils/: capstone_disasm.py
emulator/: dis_rv32i.cpp  dis_rv32i.h  disassembler.cpp
notes/: project-notes.md  riscv-notes.md
riscv-experimentaiton/: riscv-test.c
src/: ISA_CONFIG.cpp  ISA_CONFIG.h  VirtMem.cpp  VirtMem.h  cpu_rv32i.cpp  cpu_rv32i.h  dis_rv32i.cpp  dis_rv32i.h  disassembler.cpp  vmcore.cpp  vmcore.h
src/obf/: CMakeLists.txt.template  gen_trampoline.py  obfuscate.cpp  obfuscate.h  obfuscate.py  restore.cpp  restore.h
src/rv32i/: cpu_rv32i.cpp  cpu_rv32i.h  dis_rv32i.cpp  dis_rv32i.h  emulator_api.cpp  emulator_api.h  mem_rv32i.cpp  mem_rv32i.h  regs_rv32i.h
testing/: disassembler_test.cpp  disassembler_test.h
testing_infrastructure/: test_validation.py  tests.yaml
testing_infrastructure/rv32i_files/: only_fn_riscv_test.rv32i  riscv_test.rv32i
testing_infrastructure/test_source/arithmetic/: add.c  add.h  and_op.c  and_op.h  mul.c  mul.h  shl.c  shl.h  sub.c  sub.h
testing_infrastructure/test_source/branching/: nested_if.c  nested_if.h  simple_if.c  simple_if.h  switch_case.c  switch_case.h
testing_infrastructure/test_source/loops/: factorial.c  factorial.h  fibonacci.c  fibonacci.h  sum_loop.c  sum_loop.h  while_loop.c  while_loop.h
testing_infrastructure/test_source/pointers/: array_swap.c  array_swap.h  ptr_arithmetic.c  ptr_arithmetic.h  test_pointers.c
testing_infrastructure/test_source/test-arithmetic/: addition.c  addition.h  arith_test.c
testing_infrastructure/testing_utils/: capstone_disasm.py  unicorn_test_harness.py
testing_utils/: compile_disassembler.sh  load_in_disassembler.sh  unicorn_test_harness.py
