[project]
name = "rv321-virtobf"
version = "0.1.0"
description = ""
authors = [
    {name = "tgsp",email = "tgsoutha@syr.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "unicorn (>=2.1.4,<3.0.0)",
    "capstone (==6.0.0a5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
